Fix post container top margin too small

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -17,7 +17,7 @@
 
 .post {
     .container {
-        margin-top: $marginSize;
+        margin-top: 80px;
     }
 
     .heading {
